--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <h1>Bienvenidos a mi Página</h1>
+    <h2>Descripción de la Página</h2>
     <p>Hola esta es una página de inicio.</p>
 </body>
 </html>
